tests/ui/type-alias-impl-trait/indirect-recursion-issue-112047.stderr
error[E0733]: recursion in an async fn requires boxing
  --> $DIR/indirect-recursion-issue-112047.rs:13:1
   |
LL | async fn recur(t: impl Recur) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     t.recur().await;
   |     --------------- recursive call here
   |
note: which leads to this async block
  --> $DIR/indirect-recursion-issue-112047.rs:22:9
   |
LL |         async move { recur(self).await; }
   |         ^^^^^^^^^^^^^-----------------^^^
   |                      |
   |                      ...leading to this recursive call
   = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error: aborting due to previous error

For more information about this error, try `rustc --explain E0733`.
